--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <h3>Major: Computer Science</h3>
     <h3>Year: Senior</h3>
+    <a href="blog.html">Code Blog</a>
     <p> On a scale on 1 to 10, I'd say I'm a 5 when it comes down to how much HTML I know.</p>
 
     <p> I hope to get familiar with HTML, CSS, and javascript. More specifically how they all work together. </p>
