--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
   <body>
     <h1>CS 290 Blog</h1>
 
+    <a href="index.html">Home Page</a>
     <h3>Assignment 0  </h3>
     <h4> 9-23</h4>
     <h6> Reflection:</h6>
